fix: improve setup wizard checklist dark mode support
- Changed checklist container from hardcoded light gray to semi-transparent dark
- Added subtle border for better visibility
- Changed heading color to use CSS variable (--text-primary) for dark mode
- Changed checklist items from white background to semi-transparent
- Added border to checklist items for better definition
- Changed label text to use CSS variable for proper contrast
- Now works correctly in both light and dark modes

--- a/index.html
+++ b/index.html
@@ -338,33 +338,33 @@
               </div>
             </div>
 
-            <div style="background: #f3f4f6; padding: 25px; border-radius: 15px; margin-bottom: 30px;">
-              <h3 style="margin-bottom: 20px; color: #1f2937;">🚀 Setup Checklist</h3>
+            <div style="background: rgba(0, 0, 0, 0.3); padding: 25px; border-radius: 15px; margin-bottom: 30px; border: 1px solid rgba(255, 255, 255, 0.1);">
+              <h3 style="margin-bottom: 20px; color: var(--text-primary, #f9fafb);">🚀 Setup Checklist</h3>
               <div style="display: grid; gap: 12px;">
                 <div
-                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: white; border-radius: 8px;">
+                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
                   <input type="checkbox" id="setupCheckOpenAI" style="width: 20px; height: 20px;">
-                  <label for="setupCheckOpenAI" style="flex: 1; cursor: pointer;">
+                  <label for="setupCheckOpenAI" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
                     <strong>OpenAI API Key</strong> - For image generation
                     <a href="https://platform.openai.com/api-keys" target="_blank"
                       style="color: #4a90e2; text-decoration: none; margin-left: 10px;">Get Key →</a>
                   </label>
                 </div>
                 <div
-                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: white; border-radius: 8px;">
+                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
                   <input type="checkbox" id="setupCheckRunway" style="width: 20px; height: 20px;">
-                  <label for="setupCheckRunway" style="flex: 1; cursor: pointer;">
+                  <label for="setupCheckRunway" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
                     <strong>Runway API Key</strong> - For video generation (optional)
                     <a href="https://runwayml.com" target="_blank"
                       style="color: #4a90e2; text-decoration: none; margin-left: 10px;">Get Key →</a>
                   </label>
                 </div>
                 <div
-                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: white; border-radius: 8px;">
+                  style="display: flex; align-items: center; gap: 10px; padding: 12px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 8px;">
                   <input type="checkbox" id="setupCheckSocial" style="width: 20px; height: 20px;">
-                  <label for="setupCheckSocial" style="flex: 1; cursor: pointer;">
+                  <label for="setupCheckSocial" style="flex: 1; cursor: pointer; color: var(--text-primary, #f9fafb);">
                     <strong>Social Media OAuth</strong> - Connect your accounts
-                    <span style="color: #6b7280; font-size: 14px; margin-left: 10px;">(Setup after opening app)</span>
+                    <span style="color: #9ca3af; font-size: 14px; margin-left: 10px;">(Setup after opening app)</span>
                   </label>
                 </div>
               </div>
