fix: correct Runway ML button ID to match code expectations (connectRunwayMLBtn)

--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
               </div>
             </div>
 
-            <div style="background: rgba(0, 0, 0, 0.3); padding: 25px; border-radius: 15px; margin-bottom: 30px; border: 1px solid rgba(255, 255, 255, 0.1);">
+            <div
+              style="background: rgba(0, 0, 0, 0.3); padding: 25px; border-radius: 15px; margin-bottom: 30px; border: 1px solid rgba(255, 255, 255, 0.1);">
               <h3 style="margin-bottom: 20px; color: var(--text-primary, #f9fafb);">🚀 Setup Checklist</h3>
               <div style="display: grid; gap: 12px;">
                 <div
@@ -844,7 +845,7 @@ Top Text 2|Bottom Text 2"></textarea>
                 <span class="provider-name">Connect OpenAI</span>
                 <span class="connected-badge" style="display: none">✓ Connected</span>
               </button>
-              <button type="button" id="connectRunwayBtn" class="ai-connect-btn" data-provider="runway">
+              <button type="button" id="connectRunwayMLBtn" class="ai-connect-btn" data-provider="runway">
                 <span class="connect-icon">🔗</span>
                 <span class="provider-name">Connect Runway ML</span>
                 <span class="connected-badge" style="display: none">✓ Connected</span>
