fix: set aiProvider default to empty string to allow saving configs without AI connection

--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@ Top Text 2|Bottom Text 2"></textarea>
             </div>
 
             <!-- Hidden fields to store active provider and encrypted keys -->
-            <input type="hidden" id="aiProvider" value="openai" />
+            <input type="hidden" id="aiProvider" value="" />
             <input type="hidden" id="openaiApiKey" />
             <input type="hidden" id="runwayApiKey" />
           </fieldset>
