--- a/index.html
+++ b/index.html
@@ -235,7 +235,18 @@
               <option value="fast">🚀 Fast - 20 steps (~20 min on 6GB GPU)</option>
               <option value="medium">⭐ Medium - 30 steps (~5 min on 8GB GPU)</option>
               <option value="high">💎 High - 50 steps (~3 min on 12GB+ GPU)</option>
+              <option value="custom">⚙️ Custom Steps</option>
             </select>
+          </label>
+
+          <!-- Custom Steps Input (shown when "Custom" is selected) -->
+          <label id="customStepsLabel" style="display: none;">
+            Inference Steps
+            <input type="number" id="customSteps" min="10" max="100" value="25" 
+                   style="width: 100px;" />
+            <small style="color: #9ca3af; display: block; margin-top: 5px;">
+              More steps = better quality but slower (10-100)
+            </small>
           </label>
 
           <!-- Provider Capabilities Info -->
