--- a/index.html
+++ b/index.html
@@ -231,8 +231,9 @@
             Quality Preset
             <select id="localQuality">
               <option value="auto">🎯 Auto (Detect GPU)</option>
-              <option value="ultra-low">🔥 Ultra Low - 8 steps (~8 min, very basic quality)</option>
-              <option value="low">⚡ Low - 15 steps (~15 min CPU)</option>
+              <option value="potato">🥔 Potato - 2 steps (~2 min, preview quality)</option>
+              <option value="ultra-low">🔥 Ultra Low - 5 steps (~5 min, very basic)</option>
+              <option value="low">⚡ Low - 10 steps (~10 min, basic)</option>
               <option value="fast">🚀 Fast - 20 steps (~20 min on 6GB GPU)</option>
               <option value="medium">⭐ Medium - 30 steps (~5 min on 8GB GPU)</option>
               <option value="high">💎 High - 50 steps (~3 min on 12GB+ GPU)</option>
@@ -243,9 +244,9 @@
           <!-- Custom Steps Input (shown when "Custom" is selected) -->
           <label id="customStepsLabel" style="display: none;">
             Inference Steps
-            <input type="number" id="customSteps" min="5" max="100" value="25" style="width: 100px;" />
+            <input type="number" id="customSteps" min="2" max="100" value="20" style="width: 100px;" />
             <small style="color: #9ca3af; display: block; margin-top: 5px;">
-              More steps = better quality but slower (5-100)
+              More steps = better quality but slower (2-100)
             </small>
           </label>
 
